--- a/recipe.css
+++ b/recipe.css
@@ -3,6 +3,8 @@ body {
   text-align: center;
   padding-top: 5em;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center
 }
 
 nav {
@@ -42,6 +44,7 @@ h2 {
     padding: 1em;
     background-color: rgb(237, 255, 208);
     display: none;
+    box-sizing: border-box;
 }
 
 #sourseElem {
@@ -158,3 +161,63 @@ ul img {
   width: 1.2em;
   display: inline-block;
 }
+
+
+@media screen and (max-width: 569px) {
+  body, html {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  body {
+    padding-top: 2em;
+  }
+
+  #dropdown {
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+
+  #searchBar {
+    width: 100%;
+
+  }
+
+  nav {
+    width: 100%;
+    height: 3em;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    z-index: 1;
+
+  }
+
+  nav img {
+    display: none;
+  }
+
+  #recipeContainer {
+    margin: 0;
+    width: 100%;
+  }
+
+  #generalInformation {
+    flex-direction: column;
+    gap: 0;
+  }
+
+  #recipeContainer {
+    margin: 0;
+    width: 100%;
+    overflow: ;
+    max-width: 100%;
+  }
+  
+  #generalInformation p{
+    margin: 5px;
+  }
+}
+
